# FTS

EVO/how-to-make-fts-20140414/: .buildinfo  fts-languagecode.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
EVO/how-to-make-fts-20140414/_sources/: fts-languagecode.txt  index.txt
EVO/how-to-make-fts-20140414/_sources/fts-tables-for-common/: building-block-relation-table.txt  building-block-table.txt  index.txt
EVO/how-to-make-fts-20140414/_sources/fts-tables-for-name/: crossroad-fts-table.txt  index.txt  name-fts-col-meta-table.txt  name-fts-sc-definition-table.txt  name-fts-sc-name-table.txt  name-fts-sc-namedobjectclass.txt  name-fts-table.txt
EVO/how-to-make-fts-20140414/_sources/fts-tables-for-poi/: index.txt  poi-fts-attribute-definition-table.txt  poi-fts-col-meta-table.txt  poi-fts-sc-definition-table.txt  poi-fts-sc-name-table.txt  poi-fts-sc-namedobjectclass-table.txt  poi-fts-table.txt
EVO/how-to-make-fts-20140414/fts-tables-for-common/: building-block-relation-table.html  building-block-table.html  index.html
EVO/how-to-make-fts-20140414/fts-tables-for-name/: crossroad-fts-table.html  index.html  name-fts-col-meta-table.html  name-fts-sc-definition-table.html  name-fts-sc-name-table.html  name-fts-sc-namedobjectclass.html  name-fts-table.html
EVO/how-to-make-fts-20140414/fts-tables-for-poi/: index.html  poi-fts-attribute-definition-table.html  poi-fts-col-meta-table.html  poi-fts-sc-definition-table.html  poi-fts-sc-name-table.html  poi-fts-sc-namedobjectclass-table.html  poi-fts-table.html
Sqlite/: SQLite-3.8.4.2.rar  sqlite_fts_tokenizer.docx
Sqlite/src/.svn/: all-wcprops  dir-prop-base  entries
Sqlite/src/.svn/text-base/: CMakeLists.txt.svn-base
Sqlite/src/sqlite3/.svn/: all-wcprops  entries
Sqlite/src/sqlite3/.svn/text-base/: CMakeLists.txt.svn-base
Sqlite/src/sqlite3/devkit/: CMakeLists.txt  nds_compress.c  nds_extensions.c  nds_sqlite3.h
Sqlite/src/sqlite3/devkit/.svn/: all-wcprops  entries
Sqlite/src/sqlite3/devkit/.svn/text-base/: nds_extensions.h.svn-base  nds_sqlite3_analyzer.c.svn-base  shell.c.svn-base
Sqlite/src/sqlite3/devkit/extensions/.svn/: all-wcprops  entries
Sqlite/src/sqlite3/devkit/extensions/.svn/text-base/: nds_extensions.c.svn-base  nds_extensions.h.svn-base
Sqlite/src/sqlite3/devkit/extensions/collations/: localized_compare.c  localized_compare.h  lookahead_buffer.c  unichar_queue.c  unichar_queue.h  utf8_decompose_iterator.h
Sqlite/src/sqlite3/devkit/extensions/collations/.svn/: all-wcprops  entries
Sqlite/src/sqlite3/devkit/extensions/collations/.svn/text-base/: collation_data.h.svn-base  collation_data_de_de.h.svn-base  collation_data_de_de_phonebook.c.svn-base  collation_data_de_de_standard.c.svn-base  collation_data_zh_cn.h.svn-base  collation_data_zh_cn_gb2312.c.svn-base  collation_element_iterator.c.svn-base  collation_element_iterator.h.svn-base  lookahead_buffer.h.svn-base  nds_collations.c.svn-base  nds_collations_impl.c.svn-base  nds_collations_impl.h.svn-base  utf8_decompose_iterator.c.svn-base
Sqlite/src/sqlite3/devkit/extensions/tests/: test_collation_element_iterator.h  test_ndsunicode61_tokenizer.cpp  test_unichar_queue.h  test_unichar_utils.cpp  test_utf8_decompose_iterator.h
Sqlite/src/sqlite3/devkit/extensions/tests/.svn/: all-wcprops  entries
Sqlite/src/sqlite3/devkit/extensions/tests/.svn/text-base/: CMakeLists.txt.svn-base  extensions_test.cpp.svn-base  extensions_test.h.svn-base  test_collation_element_iterator.cpp.svn-base  test_compare.cpp.svn-base  test_compare.h.svn-base  test_lookahead_buffer.cpp.svn-base  test_lookahead_buffer.h.svn-base  test_ndsunicode61_tokenizer.h.svn-base  test_unichar_queue.cpp.svn-base  test_unichar_utils.h.svn-base  test_utf8_char_next.cpp.svn-base  test_utf8_char_next.h.svn-base  test_utf8_decompose_iterator.cpp.svn-base
Sqlite/src/sqlite3/devkit/extensions/tokenizer/: nds_unicode61.h
Sqlite/src/sqlite3/devkit/extensions/tokenizer/.svn/: all-wcprops  entries
Sqlite/src/sqlite3/devkit/extensions/tokenizer/.svn/text-base/: nds_unicode61.c.svn-base  string_buffer.h.svn-base
Sqlite/src/sqlite3/devkit/extensions/utils/: nds_extension_macros.h  nds_int.h  unichar_decomposition_data.c  unichar_utils.h  utf8_utils.c  utf8_utils.h
Sqlite/src/sqlite3/devkit/extensions/utils/.svn/: all-wcprops  entries
Sqlite/src/sqlite3/devkit/extensions/utils/.svn/text-base/: nds_bool.h.svn-base  unichar.h.svn-base  unichar_decomposition_data.h.svn-base  unichar_utils.c.svn-base
Sqlite/src/sqlite3/editline/: config.h  read.c
Sqlite/src/sqlite3/editline/.svn/: all-wcprops  entries
Sqlite/src/sqlite3/editline/.svn/text-base/: CMakeLists.txt.svn-base  el.c.svn-base
Sqlite/src/sqlite3/editline/editline/.svn/: all-wcprops  entries
Sqlite/src/sqlite3/jdbc/: CMakeLists.txt  NativeDB.h
Sqlite/src/sqlite3/jdbc/.svn/: all-wcprops  entries
Sqlite/src/sqlite3/jdbc/.svn/text-base/: NativeDB.c.svn-base
Sqlite/src/sqlite3/jdbc/lib/.svn/: all-wcprops  entries
Sqlite/src/sqlite3/jdbc/lib/inc_linux/.svn/: all-wcprops  entries
Sqlite/src/sqlite3/jdbc/lib/inc_win/.svn/: all-wcprops  entries
Sqlite/src/sqlite3/lz4/: CMakeLists.txt
Sqlite/src/sqlite3/lz4/.svn/: all-wcprops  entries
Sqlite/src/sqlite3/ndsc/: CMakeLists.txt  packerNDSC.c  packerNDSC.h
Sqlite/src/sqlite3/ndsc/.svn/: all-wcprops  entries
Sqlite/src/sqlite3/rijndael/.svn/: all-wcprops  entries
Sqlite/src/sqlite3/rijndael/.svn/text-base/: CMakeLists.txt.svn-base
Sqlite/src/sqlite3/zlib/.svn/: all-wcprops  entries
Sqlite/src/sqlite3/zlib/.svn/text-base/: CMakeLists.txt.svn-base
